[tool.poetry]
name = "twitch-emote-analysis"
version = "0.1.0"
description = ""
authors = ["Bruno Queiroz <brunoldqueiroz@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
asyncio = "^3.4.3"
requests = "^2.32.3"
pytz = "^2024.1"
aiobotocore = "^2.13.0"
pyarrow = "^16.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipython = "^8.25.0"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
